# Coach-PFE

./: .gitignore  README.md  pipeline_ingestion.py  pyproject.toml  requirements.txt
coach_pfe_langgraph/: router.py  state.py
coach_pfe_langgraph/agents/: correcteur.py  methodologue.py
coach_pfe_langgraph/utils/: logger.py
