[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coach-pfe-langgraph"
version = "0.1.0"
description = "Plateforme multi-agents d'accompagnement académique avec LangGraph et Gemini"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Med Reda Hadarbach" }
]
dependencies = [
    "langgraph>=0.0.30",
    "langchain-core>=0.1.40",
    "langchain-google-genai>=1.0.1",
    "langchain-mongodb>=0.1.3",
    "pymongo>=4.6.2",
    "python-telegram-bot>=21.0.1",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.2.0",
    "jupyter>=1.0.0"
]